update script London et Dubaï

--- a/script_stat_model_Dubai.ipynb
+++ b/script_stat_model_Dubai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "21a7500c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "36343505",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "9419253f",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "706d4d40",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "max    210.583333   98.437500  374.762500  191.291810  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "b6fbf5e1",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "bdf8ef83",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "74f75c3e",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "4d9905eb",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "d3288676",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "5b27b35c",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "044944e8",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "07a93a76",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "fedc7a83",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "8fe9b390",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "eef71a50",
    "metadata": {},
    "outputs": [],
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "23bf3dab",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "24186948",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "b49bc746",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "b37b96a8",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "1ee70be4",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,7 @@
       "Scale Est.:                       mad                                         \n",
       "Cov Type:                          H1                                         \n",
       "Date:                Wed, 16 Jul 2025                                         \n",
-      "Time:                        11:35:50                                         \n",
+      "Time:                        11:46:24                                         \n",
       "No. Iterations:                    25                                         \n",
       "==========================================================================================\n",
       "                             coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "ad0b0946",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "09cfdf12",
    "metadata": {},
    "outputs": [],
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "2e42998e",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "7ac1cb43",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "5e1e3f2e",
    "metadata": {},
    "outputs": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "id": "a6336eae",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1639,7 @@
       "Scale Est.:                       mad                                         \n",
       "Cov Type:                          H1                                         \n",
       "Date:                Wed, 16 Jul 2025                                         \n",
-      "Time:                        11:35:52                                         \n",
+      "Time:                        11:46:26                                         \n",
       "No. Iterations:                    50                                         \n",
       "=====================================================================================================\n",
       "                                        coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "id": "fd7e1512",
    "metadata": {},
    "outputs": [
@@ -1922,6 +1922,60 @@
     "plt.tight_layout()\n",
     "plt.grid(True, axis='x')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5557d378",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² train : 0.8630077442281752\n",
+      "R² test  : 0.820777743288134\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "X = df[features]\n",
+    "X_const = sm.add_constant(X)\n",
+    "X_const = X_const.astype(float)\n",
+    "\n",
+    "# Séparer les données\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_const, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Refit sur les données d'entraînement\n",
+    "model_rlm_train = sm.RLM(y_train, X_train, M=sm.robust.norms.HuberT()).fit()\n",
+    "\n",
+    "# Prédictions\n",
+    "y_pred_train = model_rlm_train.predict(X_train)\n",
+    "y_pred_test = model_rlm_train.predict(X_test)\n",
+    "\n",
+    "# Évaluer\n",
+    "print(\"R² train :\", r2_score(y_train, y_pred_train))\n",
+    "print(\"R² test  :\", r2_score(y_test, y_pred_test))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "032e830d",
+   "metadata": {},
+   "source": [
+    "- Écart faible entre train et test → peu de sur-apprentissage (overfitting).\n",
+    "\n",
+    "- Le modèle est assez généralisable.\n",
+    "\n",
+    "- On peut dire qu’il modélise bien la relation entre les variables et l’AQI.\n",
+    "\n",
+    "| Jeu de données | R²    | Interprétation                                                                      |\n",
+    "| -------------- | ----- | ----------------------------------------------------------------------------------- |\n",
+    "| **Train**      | 0.86 | Le modèle explique **86 %** de la variance de l’AQI sur les données d’entraînement. |\n",
+    "| **Test**       | 0.82 | Il explique **82 %** de la variance sur des données **non vues**.                   |\n"
    ]
   }
  ],
