--- a/script_london_dubai.ipynb
+++ b/script_london_dubai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "21a7500c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "36343505",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "9419253f",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "706d4d40",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "[8 rows x 21 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "e671f5aa",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "9918dcbd",
    "metadata": {},
    "outputs": [
@@ -624,6 +624,7 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "# 6. Temporal trends (AQI over time for all cities)\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "plt.figure(figsize=(12, 8))\n",
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "bdf8ef83",
    "metadata": {},
    "outputs": [
@@ -694,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "d3288676",
    "metadata": {},
    "outputs": [
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "53b89260",
    "metadata": {},
    "outputs": [],
@@ -756,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "8ea0ff7d",
    "metadata": {},
    "outputs": [
@@ -791,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "0e9b1f64",
    "metadata": {},
    "outputs": [
@@ -801,82 +802,120 @@
      "text": [
       "\n",
       "🔍 Test ANOVA pour la variable : TEMP_MOY\n",
-      "                sum_sq     df           F         PR(>F)\n",
-      "C(City)   48518.634221    1.0  1902.01277  1.770788e-205\n",
-      "Residual  18621.643101  730.0         NaN            NaN\n",
+      "             df        sum_sq       mean_sq           F         PR(>F)\n",
+      "C(City)     1.0  48518.634221  48518.634221  1902.01277  1.770788e-205\n",
+      "Residual  730.0  18621.643101     25.509100         NaN            NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : HUMIDITY_EST_AVG\n",
-      "                sum_sq     df           F         PR(>F)\n",
-      "C(City)   52683.196721    1.0  989.866218  5.583974e-138\n",
-      "Residual  38852.455943  730.0         NaN            NaN\n",
+      "             df        sum_sq       mean_sq           F         PR(>F)\n",
+      "C(City)     1.0  52683.196721  52683.196721  989.866218  5.583974e-138\n",
+      "Residual  730.0  38852.455943     53.222542         NaN            NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : WINDSPEED_AVG_KMH\n",
-      "                sum_sq     df           F        PR(>F)\n",
-      "C(City)    1409.630656    1.0  101.630863  1.822200e-22\n",
-      "Residual  10125.176066  730.0         NaN           NaN\n",
+      "             df        sum_sq      mean_sq           F        PR(>F)\n",
+      "C(City)     1.0   1409.630656  1409.630656  101.630863  1.822200e-22\n",
+      "Residual  730.0  10125.176066    13.870104         NaN           NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : PRECIP_TOTAL_DAY_MM\n",
-      "               sum_sq     df          F    PR(>F)\n",
-      "C(City)     38.603292    1.0  19.962335  0.000009\n",
-      "Residual  1411.678716  730.0        NaN       NaN\n",
+      "             df       sum_sq    mean_sq          F    PR(>F)\n",
+      "C(City)     1.0    38.603292  38.603292  19.962335  0.000009\n",
+      "Residual  730.0  1411.678716   1.933806        NaN       NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : CLOUDCOVER_AVG_PERCENT\n",
-      "                 sum_sq     df            F         PR(>F)\n",
-      "C(City)   467649.424202    1.0  1073.926115  1.497447e-145\n",
-      "Residual  317884.140070  730.0          NaN            NaN\n",
+      "             df         sum_sq        mean_sq            F         PR(>F)\n",
+      "C(City)     1.0  467649.424202  467649.424202  1073.926115  1.497447e-145\n",
+      "Residual  730.0  317884.140070     435.457726          NaN            NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : Toluène\n",
-      "              sum_sq     df            F         PR(>F)\n",
-      "C(City)   801.090387    1.0  1118.542313  3.448607e-113\n",
-      "Residual  261.409861  365.0          NaN            NaN\n",
+      "             df      sum_sq   mean_sq         F    PR(>F)\n",
+      "C(City)     1.0    0.066984  0.066984  0.093529  0.759913\n",
+      "Residual  365.0  261.409861  0.716191       NaN       NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : Benzène\n",
-      "             sum_sq     df           F         PR(>F)\n",
-      "C(City)   95.050015    1.0  2661.06071  1.015137e-169\n",
-      "Residual  13.037378  365.0         NaN            NaN\n",
+      "             df     sum_sq   mean_sq         F    PR(>F)\n",
+      "C(City)     1.0   0.002317  0.002317  0.064865  0.799109\n",
+      "Residual  365.0  13.037378  0.035719       NaN       NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : CO\n",
-      "                sum_sq     df            F         PR(>F)\n",
-      "C(City)   1.168772e+07    1.0  1369.853696  1.192387e-169\n",
-      "Residual  6.228427e+06  730.0          NaN            NaN\n",
+      "             df        sum_sq       mean_sq            F         PR(>F)\n",
+      "C(City)     1.0  1.168772e+07  1.168772e+07  1369.853696  1.192387e-169\n",
+      "Residual  730.0  6.228427e+06  8.532092e+03          NaN            NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : NO2\n",
-      "                 sum_sq     df           F        PR(>F)\n",
-      "C(City)    57272.495484    1.0  275.351719  1.038846e-52\n",
-      "Residual  151838.244937  730.0         NaN           NaN\n",
+      "             df         sum_sq       mean_sq           F        PR(>F)\n",
+      "C(City)     1.0   57272.495484  57272.495484  275.351719  1.038846e-52\n",
+      "Residual  730.0  151838.244937    207.997596         NaN           NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : SO2\n",
-      "                sum_sq     df            F         PR(>F)\n",
-      "C(City)   52780.520316    1.0  1542.303657  3.602613e-182\n",
-      "Residual  24981.967504  730.0          NaN            NaN\n",
+      "             df        sum_sq       mean_sq            F         PR(>F)\n",
+      "C(City)     1.0  52780.520316  52780.520316  1542.303657  3.602613e-182\n",
+      "Residual  730.0  24981.967504     34.221873          NaN            NaN\n",
       "\n",
       "🔍 Test ANOVA pour la variable : O3\n",
-      "                 sum_sq     df           F        PR(>F)\n",
-      "C(City)   366049.526319    1.0  441.213389  5.518753e-77\n",
-      "Residual  605639.268884  730.0         NaN           NaN\n",
+      "             df         sum_sq        mean_sq           F        PR(>F)\n",
+      "C(City)     1.0  366049.526319  366049.526319  441.213389  5.518753e-77\n",
+      "Residual  730.0  605639.268884     829.642834         NaN           NaN\n",
       "\n",
-      "🔍 Test ANOVA pour la variable : PM2.5\n"
+      "🔍 Test ANOVA pour la variable : PM2.5\n",
+      "             df         sum_sq        mean_sq            F         PR(>F)\n",
+      "C(City)     1.0  182608.917270  182608.917270  1488.728727  2.194282e-178\n",
+      "Residual  730.0   89542.511804     122.660975          NaN            NaN\n",
+      "\n",
+      "🔍 Test ANOVA pour la variable : PM10\n",
+      "             df        sum_sq       mean_sq           F         PR(>F)\n",
+      "C(City)     1.0  1.718462e+06  1.718462e+06  798.762032  2.750017e-119\n",
+      "Residual  730.0  1.570527e+06  2.151407e+03         NaN            NaN\n",
+      "\n",
+      "🔍 Test ANOVA pour la variable : AQI\n",
+      "             df         sum_sq        mean_sq            F         PR(>F)\n",
+      "C(City)     1.0  615962.528383  615962.528383  1692.025365  2.725106e-192\n",
+      "Residual  730.0  265748.170868     364.038590          NaN            NaN\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "from patsy import dmatrix, dmatrices, demo_data, build_design_matrices, ModelDesc, Term, EvalFactor  # pas forcément nécessaire directement\n",
+    "\n",
+    "# Sélection des colonnes de type float\n",
+    "colonnes_float = df.select_dtypes(include='float').columns\n",
+    "\n",
+    "# Boucle sur chaque variable float\n",
+    "for col in colonnes_float:\n",
+    "    print(f\"\\n🔍 Test ANOVA pour la variable : {col}\")\n",
+    "\n",
+    "    model = ols(f'Q(\"{col}\") ~ C(City)', data=df).fit()\n",
+    "    anova_table = sm.stats.anova_lm(model, type=2)\n",
+    "    print(anova_table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6c58cbc4",
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<unknown>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3672\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  Cell \u001b[92mIn[50]\u001b[39m\u001b[92m, line 12\u001b[39m\n    model = ols(f'{col} ~ C(City)', data=df).fit()\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\statsmodels\\base\\model.py:203\u001b[39m in \u001b[95mfrom_formula\u001b[39m\n    tmp = handle_formula_data(data, None, formula, depth=eval_env,\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\statsmodels\\formula\\formulatools.py:63\u001b[39m in \u001b[95mhandle_formula_data\u001b[39m\n    result = dmatrices(formula, Y, depth, return_type='dataframe',\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\highlevel.py:319\u001b[39m in \u001b[95mdmatrices\u001b[39m\n    (lhs, rhs) = _do_highlevel_design(\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\highlevel.py:164\u001b[39m in \u001b[95m_do_highlevel_design\u001b[39m\n    design_infos = _try_incr_builders(\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\highlevel.py:56\u001b[39m in \u001b[95m_try_incr_builders\u001b[39m\n    return design_matrix_builders(\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\build.py:743\u001b[39m in \u001b[95mdesign_matrix_builders\u001b[39m\n    factor_states = _factors_memorize(all_factors, data_iter_maker, eval_env)\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\build.py:393\u001b[39m in \u001b[95m_factors_memorize\u001b[39m\n    which_pass = factor.memorize_passes_needed(state, eval_env)\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\eval.py:504\u001b[39m in \u001b[95mmemorize_passes_needed\u001b[39m\n    subset_names = [name for name in ast_names(self.code) if name in env_namespace]\n",
-      "  File \u001b[92mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\site-packages\\patsy\\eval.py:111\u001b[39m in \u001b[95mast_names\u001b[39m\n    for node in ast.walk(ast.parse(code)):\n",
-      "\u001b[36m  \u001b[39m\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\LENOVO\\anaconda3\\envs\\datamanagement\\Lib\\ast.py:52\u001b[39m\u001b[36m in \u001b[39m\u001b[35mparse\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn compile(source, filename, mode, flags,\u001b[39m\n",
-      "  \u001b[36mFile \u001b[39m\u001b[32m<unknown>:1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mPM2 .5\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Variable        F  p-value\n",
+      "0                 TEMP_MOY  1902.01  0.00000\n",
+      "1         HUMIDITY_EST_AVG   989.87  0.00000\n",
+      "2        WINDSPEED_AVG_KMH   101.63  0.00000\n",
+      "3      PRECIP_TOTAL_DAY_MM    19.96  0.00001\n",
+      "4   CLOUDCOVER_AVG_PERCENT  1073.93  0.00000\n",
+      "5                  Toluène  1118.54  0.00000\n",
+      "6                  Benzène  2661.06  0.00000\n",
+      "7                       CO  1369.85  0.00000\n",
+      "8                      NO2   275.35  0.00000\n",
+      "9                      SO2  1542.30  0.00000\n",
+      "10                      O3   441.21  0.00000\n",
+      "11                   PM2.5  1488.73  0.00000\n",
+      "12                    PM10   798.76  0.00000\n",
+      "13                     AQI  1692.03  0.00000\n"
      ]
     }
    ],
@@ -885,16 +924,37 @@
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
     "\n",
+    "# Liste pour stocker les résultats\n",
+    "resultats_anova = []\n",
+    "\n",
     "# Sélection des colonnes de type float\n",
     "colonnes_float = df.select_dtypes(include='float').columns\n",
     "\n",
-    "# Boucle sur chaque variable float\n",
+    "# Boucle sur chaque variable\n",
     "for col in colonnes_float:\n",
-    "    print(f\"\\n🔍 Test ANOVA pour la variable : {col}\")\n",
-    "    \n",
-    "    model = ols(f'{col} ~ C(City)', data=df).fit()\n",
-    "    anova_table = sm.stats.anova_lm(model, typ=2)\n",
-    "    print(anova_table)\n"
+    "    try:\n",
+    "        model = ols(f'Q(\"{col}\") ~ C(City)', data=df).fit()\n",
+    "        anova_table = sm.stats.anova_lm(model, typ=2)\n",
+    "        \n",
+    "        # Extraire la p-value pour \"C(City)\"\n",
+    "        p_value = anova_table.loc['C(City)', 'PR(>F)']\n",
+    "        F_stat = anova_table.loc['C(City)', 'F']\n",
+    "        \n",
+    "        # Ajouter au tableau final\n",
+    "        resultats_anova.append({\n",
+    "            'Variable': col,\n",
+    "            'F': round(F_stat, 2),\n",
+    "            'p-value': round(p_value, 5)\n",
+    "        })\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erreur avec la variable {col} : {e}\")\n",
+    "\n",
+    "# Convertir la liste en DataFrame\n",
+    "df_resultats_anova = pd.DataFrame(resultats_anova)\n",
+    "\n",
+    "# Afficher le tableau complet\n",
+    "print(df_resultats_anova)"
    ]
   }
  ],
