rangement des fichiers

--- a/serie_temporelle/modele_ARIMA copy.ipynb
+++ b/serie_temporelle/modele_ARIMA copy.ipynb
@@ -1451,7 +1451,7 @@
    "id": "d2e40382",
    "metadata": {},
    "source": [
-    "#### Prévision des valeurs futures"
+    "#### Prévision des valeurs futures selon une période donnée"
    ]
   },
   {
@@ -1572,6 +1572,64 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017a4307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\nPrévision future au-delà des données existantes...\")\n",
+    "\n",
+    "try:\n",
+    "    future_forecast_results = results_aqi.get_prediction(start=test_aqi[0],\n",
+    "                                                    end=test_aqi[-1],\n",
+    "                                                    exog=exog_future) \n",
+    "\n",
+    "    future_forecast_mean = future_forecast_results.predicted_mean\n",
+    "    future_conf_int = future_forecast_results.conf_int()\n",
+    "\n",
+    "    print(f\"\\nPrévisions effectuées avec succès pour les futures données.\")\n",
+    "    print(\"\\nAperçu des prévisions (AQI) :\")\n",
+    "    print(future_forecast_mean)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Une erreur est survenue lors de la prédiction : {e}\")\n",
+    "    print(\"Vérifiez l'alignement des indices ou le format de 'exog_future'.\")\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(18, 8))\n",
+    "\n",
+    "plt.plot(train_aqi.index, train_aqi, label='Données historiques', alpha=0.8) # données historiques\n",
+    "plt.plot(test_aqi.index, test_aqi, label='Données réelles AQI (Test)', color=colors[1], alpha=0.7)\n",
+    "plt.plot(future_forecast_mean.index, future_forecast_mean, label='Prévisions futures SARIMAX', color='red',  linestyle='--')\n",
+    "\n",
+    "plt.fill_between(future_conf_int.index, future_conf_int.iloc[:, 0], future_conf_int.iloc[:, 1], color=colors[0], alpha=0.1, label='Intervalle de confiance futur')\n",
+    "plt.title('Prévisions SARIMAX pour les périodes futures')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('AQI')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e132749",
+   "metadata": {},
+   "source": [
+    "### Calcul des métriques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94d8734d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
